one line updated

--- a/app.json
+++ b/app.json
@@ -9,8 +9,7 @@
       }
       ,
       "Action": ["s3:GetBucketAcl",
-                 "s3:PutObject",
-                 "s3:GetObject"
+                 "s3:PutObject"
                 ],
     
       "Resource": ["arn:aws:s3:::mycloudwatchlogsbkts",
